# BlueEngine

./: BlueEngineHeader.h  CMakeLists.txt  README.md
Common/Basics/: BitField.hpp
Common/Graphic/: Colours.cpp  Colours.h
Common/Maths/: Matrix.hpp
Common/Maths/AnalyticGeometry/: AnalyticGeometryHeaders.h  Calculations.cpp  Calculations.h  Common.h  Plane.cpp  Plane.h  Point.cpp  Point.h  StraightLine.cpp  StraightLine.h  Triangle.cpp  Triangle.h  TrianglesSequence.cpp  TrianglesSequence.h  Vector.cpp  Vector.h
Common/Maths/Matrices/: Matrix.hpp
Engine/: Engine.cpp  Engine.h
Engine/GraphicEngine/: GraphicEngine.cpp  GraphicEngine.h  GraphicsEngine.cpp  GraphicsEngine.h
Engine/GraphicEngine/Managers/ViewManager/: ViewManager.cpp  ViewManager.h
Engine/GraphicEngine/ObjectClasses/: BaseObjectClass.cpp  BaseObjectClass.h
Engine/GraphicEngine/ObjectClasses/Camera/: Camera.cpp  Camera.h
Engine/GraphicEngine/ObjectClasses/CoordinateSystem/: CoordinateSystem.cpp  CoordinateSystem.h
Engine/GraphicEngine/ObjectClasses/CoordinateSystem/AdvancedCoordinateSystem/: AdvancedCoordinateSystem.cpp  AdvancedCoordinateSystem.h
Engine/GraphicEngine/ObjectClasses/CoordinateSystem/WorldOrigin/: WorldOrigin.cpp  WorldOrigin.h
Logger/: Logger.cpp  Logger.h
Tests/: CMakeLists.txt
Tests/Classes/: CMakeLists.txt
Tests/Classes/Common/: CMakeLists.txt
Tests/Classes/Common/Maths/: CMakeLists.txt
Tests/Classes/Common/Maths/AnalyticGeometry/: CMakeLists.txt  main.cpp
Tests/Research/: CMakeLists.txt  main.cpp
VideoOutputWindow/: VideoOutputWindow.cpp  VideoOutputWindow.h
